@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -57,8 +57,9 @@
     {
       "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
-        "6",
-        "7"
+        "8",
+        "7",
+        "6"
       ]
     }
   ],
